# farol_test

./: farol.py  frontend.py  pyproject.toml  requirements.txt
