[tool.poetry]
name = "farol-saneamento"
version = "0.1.0"
description = "Ainda e um teste"
authors = ["Luiz Lopes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.0"
openpyxl = "^3.1.5"
matplotlib = "^3.10.0"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
